# abelian-miner-gpu

./: .gitmodules  CMakeLists.txt  README.md
cmake/Hunter/: config.cmake
ethminer/: CMakeLists.txt  README.md  main.cpp
ethminer/poolaccounts/: PoolAccounts.h
ethminer/poolaccounts/abelmine/: AbelMineAccount.cpp  AbelMineAccount.h  README.md
ethminer/poolaccounts/abelmine/utils/: SHA256.cpp  SHA256.h  stringutils.cpp  stringutils.h
libapicore/: ApiServer.cpp
libdevcore/: FixedHash.h
libethash-cl/: CMakeLists.txt
libethash-cl/kernels/cl/: ethash.cl
libethash-cpu/: CMakeLists.txt
libethash-cuda/: CMakeLists.txt  CUDAMiner.cpp  dagger_shuffled.cuh  keccak.cuh
libethcore/: CMakeLists.txt  EthashAux.cpp  EthashAux.h  Farm.cpp  Miner.cpp
libpoolprotocols/: CMakeLists.txt  PoolClient.h  PoolManager.cpp  PoolManager.h  PoolURI.h
libpoolprotocols/getwork/: AbelGetworkClient.cpp  AbelGetworkClient.h  base64.cpp  base64.h
libpoolprotocols/stratum/: AbelStratumClient.cpp  AbelStratumClient.h  EthStratumClient.cpp  EthStratumClient.h
